index.css
/* ... */
@media screen and (max-width: 375px) {
    body {
        overflow-x: hidden;
        background: #000000;
    }

    .container {
        padding: 0.5rem;
    }

    .navbar {
        margin-top: 1rem;
        margin-right: 30px;
    }

    .nav-menu {
        position: fixed;
        right: -100%; /* Change from left to right */
        top: 0;
        height: 100vh;
        width: 70%; /* Adjust width as needed */
        flex-direction: column;
        background: rgba(0, 0, 0, 0.9);
        text-align: center;
        transition: 0.3s;
        box-shadow: -10px 0 27px rgba(0, 0, 0, 0.05);
        z-index: 10;
        padding-top: 4rem;
    }

    .nav-menu.active {
        right: 0; /* Change from left to right */
    }

    .nav-menu li {
        margin: 2.5rem 0;
    }

    .menu-toggle {
        display: block;
        z-index: 11;
        scale: 0.8;
        position: relative;
        margin-right: 8.5rem;
    }

    .menu-toggle.active .bar:nth-child(2) {
        opacity: 0;
    }

    .menu-toggle.active .bar:nth-child(1) {
        transform: translateY(7px) rotate(45deg);
    }

    .menu-toggle.active .bar:nth-child(3) {
        transform: translateY(-7px) rotate(-45deg);
    }

    .content {
        width: auto;
        margin-left: -1rem;
        margin-top: 6.3rem;
        max-height: 100vh;
        
    }

    .header h1 {
        text-align: left;
        font-size: 2rem;
        margin-top: -3rem;
        margin-left: 1.2rem;
    }

    .slogan h3 {
        font-size: 0.8rem;
        margin-top: -1rem;
        margin-left: 1rem;
        margin-bottom: 0.8rem;
    }
    
    .cta-button {
        margin-left: -6rem;
        margin-top: -6rem;
        scale: 0.5;
        width: 106%;
        padding: 0.8rem 1.5rem;
    }

    .social_icons {
        margin-left: -8.6rem;
        margin-top: -3.4rem;
    }
    .social_icons img{
        scale: 0.8;
    }

    .copyrights {
        scale: 0.7;
        margin-top: -0.2rem;
        margin-left: -11rem;
    }

    .skill_container > div {
        background-color: #1d1d1d;
        padding: 16px; 
        border-radius: 23px;
        width: 150%; 
        height: 120px;
        margin: 20px -2.7rem;
        align-items: center;
    }
}

